<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Search">

    <LinearLayout
        android:layout_width="291dp"
        android:layout_height="465dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/searchLabel"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/search_label"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/originLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/origin_label"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/originInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/origin_placeholder" />

        <TextView
            android:id="@+id/destinationLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/destination_label"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/destinationInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/destination_placeholder" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="130dp"
                android:layout_height="88dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/departureLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/departure_label"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/departureInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="date"
                    android:hint="mm/dd/yyyy" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="132dp"
                android:layout_height="86dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/returnLabel"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/return_label"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/returnInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="date"
                    android:hint="mm/dd/yyyy" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="222dp"
            android:layout_height="65dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/passengerNumberLabel"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/passenger_number_label" />

            <EditText
                android:id="@+id/passengerNumberInput"
                android:layout_width="127dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="number" />
        </LinearLayout>

        <CheckBox
            android:id="@+id/roundTripCheckBox"
            android:layout_width="126dp"
            android:layout_height="2dp"
            android:layout_weight="1"
            android:text="@string/roundtrip_label" />

        <Button
            android:id="@+id/searchButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/search_button_text"
            android:onClick="searchButton" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>